Add Dropbox support

--- a/res/resources.qrc
+++ b/res/resources.qrc
@@ -4,6 +4,7 @@
         <file>gfx/bug.png</file>
         <file>gfx/effects.png</file>
         <file>gfx/icon-android.png</file>
+        <file>gfx/icon-dropbox.png</file>
         <file>gfx/icon-kindle.png</file>
         <file>gfx/logo.png</file>
         <file>gfx/task-pack.png</file>
