--- a/res/resources.qrc
+++ b/res/resources.qrc
@@ -4,8 +4,10 @@
         <file>gfx/bug.png</file>
         <file>gfx/effects.png</file>
         <file>gfx/icon-android.png</file>
-        <file>gfx/icon-dropbox.png</file>
         <file>gfx/icon-kindle.png</file>
+        <file>gfx/icon-dropbox.png</file>
+        <file>gfx/icon-gdrive.png</file>
+        <file>gfx/icon-onedrive.png</file>
         <file>gfx/logo.png</file>
         <file>gfx/task-pack.png</file>
         <file>fonts/OpenSans-Light.ttf</file>
