--- a/res/resources.qrc
+++ b/res/resources.qrc
@@ -17,9 +17,9 @@
         <file>gfx/actions/logo.png</file>
         <file>gfx/actions/open.png</file>
         <file>gfx/actions/open-icon.png</file>
+        <file>gfx/actions/open-list.png</file>
         <file>gfx/actions/pack.png</file>
         <file>gfx/actions/qt.png</file>
-        <file>gfx/actions/recent.png</file>
         <file>gfx/actions/reset.png</file>
         <file>gfx/actions/resize.png</file>
         <file>gfx/actions/save.png</file>
