Refactoring of donation dialog

--- a/res/resources.qrc
+++ b/res/resources.qrc
@@ -7,6 +7,7 @@
         <file>gfx/actions/box.png</file>
         <file>gfx/actions/bug.png</file>
         <file>gfx/actions/close.png</file>
+        <file>gfx/actions/coins.png</file>
         <file>gfx/actions/copy.png</file>
         <file>gfx/actions/donate.png</file>
         <file>gfx/actions/effects.png</file>
