Resize dialog for both sides

--- a/res/resources.qrc
+++ b/res/resources.qrc
@@ -16,6 +16,7 @@
         <file>gfx/actions/help.png</file>
         <file>gfx/actions/key.png</file>
         <file>gfx/actions/logo.png</file>
+        <file>gfx/actions/lock.png</file>
         <file>gfx/actions/open.png</file>
         <file>gfx/actions/open-icon.png</file>
         <file>gfx/actions/open-list.png</file>
