Add create/remove icon buttons; update layout

--- a/res/resources.qrc
+++ b/res/resources.qrc
@@ -23,6 +23,7 @@
         <file>gfx/actions/open-list.png</file>
         <file>gfx/actions/pack.png</file>
         <file>gfx/actions/qt.png</file>
+        <file>gfx/actions/remove.png</file>
         <file>gfx/actions/reset.png</file>
         <file>gfx/actions/resize.png</file>
         <file>gfx/actions/save.png</file>
