--- a/res/resources.qrc
+++ b/res/resources.qrc
@@ -10,6 +10,7 @@
         <file>gfx/actions/close.png</file>
         <file>gfx/actions/coins.png</file>
         <file>gfx/actions/copy.png</file>
+        <file>gfx/actions/copy-icon.png</file>
         <file>gfx/actions/donate.png</file>
         <file>gfx/actions/effects.png</file>
         <file>gfx/actions/explore.png</file>
